app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */
.top-effect {
  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
  background: #CCC;
  margin-bottom: 20px;
}

form textarea {
  width: 206px;
  min-width: 206px;
  max-width: 206px;
  height: 60px;
  min-height: 20px;
  max-height: 180px;
}

input, textarea, .uneditable-input {
    width: 206px;
}
input.datepicker {
    width: 179px;
}

.nested-resource input.item-destroy {
  display: none;
}

.translation_missing {
  color: red;
}

